<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="operand_prompt">Enter a number</string>
	<string name="add_op">"+"</string>
	<string name="sub_op">"-"</string>
	<string name="mult_op">"*"</string>
	<string name="div_op">"/"</string>
	<string name="answer">"="</string>
	<string name="clear">c</string>
	<string name="result_string">Result=</string>
	<string name="go_back">Go Back</string>
</resources>