<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity" >

   <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content" >
        <EditText
        	android:id="@+id/left_operand" 
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:maxLength="24"
        	android:singleLine="true"
        	android:hint="@string/operand_prompt"
        />
    
    	<TextView
			android:id="@+id/operator" 
			android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textSize="24sp"
		/>

    	<EditText 
        	android:id="@+id/right_operand" 
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:maxLength="24"
        	android:singleLine="true"
        	android:hint="@string/operand_prompt" 
	     />
	     <TextView
			android:id="@+id/result" 
			android:layout_width="fill_parent"
	        android:layout_height="0dp"
	       	android:layout_weight="1"
	       	android:gravity="left"
        	android:textSize="18sp"
	        android:text=""
		/>
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="wrap_content"
   		android:layout_height="fill_parent" >
        <Button 
            android:id="@+id/add" 
			android:layout_width="50dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:textSize="24sp"
        	android:text="@string/add_op"
        	android:onClick="onClickOperator"
         />
        <Button 
            android:id="@+id/subtract" 
			android:layout_width="50dp"
        	android:layout_height="wrap_content"
       		android:layout_weight="1"
        	android:textSize="24sp"
        	android:text="@string/sub_op"
        	android:onClick="onClickOperator"
          />
         <Button 
            android:id="@+id/multiply" 
			android:layout_width="50dp"
        	android:layout_height="wrap_content"
       		android:layout_weight="1"
        	android:textSize="24sp"
        	android:text="@string/mult_op"
        	android:onClick="onClickOperator"
           />
         <Button 
            android:id="@+id/divide" 
			android:layout_width="50dp"
        	android:layout_height="wrap_content"
       		android:layout_weight="1"
        	android:textSize="24sp"
        	android:text="@string/div_op"
        	android:onClick="onClickOperator"
            />
         <Button 
            android:id="@+id/calcAnswer" 
			android:layout_width="50dp"
   			android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:textSize="24sp"
        	android:text="@string/answer"
        	android:onClick="onClickAnswer"
         />
         <Button 
            android:id="@+id/clearAll" 
			android:layout_width="50dp"
   			android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:textSize="24sp"
        	android:text="@string/clear"
        	android:onClick="onClickClear"
          />
     </LinearLayout>

</LinearLayout>